# planrehidro-flu

./: .env  .gitignore  pyproject.toml  temp3.py
planrehidro_flu/app/: app.py  config_pesos_params.py  consistencia_dataframe.py  dados_tabulares.py  data.py  mapa.py  pages.py  params_default_values.py  processamento_multicriterio.py
planrehidro_flu/app/paginas/: config_pesos_params.py  dados_tabulares.py  mapa.py
planrehidro_flu/core/: enums.py  main.py  models.py  parametros_calculo.py  parametros_multicriterio.py  params_funcoes_suporte.py
planrehidro_flu/core/report/: relatorio1.ipynb
planrehidro_flu/databases/cplar/: bd_cplar_reader.py  models.py
planrehidro_flu/databases/hidro/: connection.py  enums.py  hidro_reader.py  models.py
planrehidro_flu/databases/internal/: database.db  database_access.py  migracao_bases_cplar.py  models.py  readme.md
