[tool.poetry]
name = "planrehidro-flu"
version = "0.1.0"
description = ""
authors = ["mvcastro <mvcastro1975@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.1"
pyodbc = "^5.2.0"
pandas-stubs = "^2.3.2.250827"
pandas = "^2.3.2"
sqlalchemy = "^2.0.43"
pydantic = "^2.11.7"
geopandas = "^1.1.1"
types-geopandas = "^1.1.1.20250829"
ipykernel = "^6.30.1"
matplotlib = "^3.10.6"
streamlit = "^1.49.1"
plotly = "^6.3.0"
streamlit-folium = "^0.25.1"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
